--- a/lolo surf/index.html
+++ b/lolo surf/index.html
@@ -23,19 +23,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="./archivos HTML y CSS/nosotros.html" alt="nosotros">nosotros</a>
+                    <a class="nav-link" href="./archivos HTML y CSS/HTML/nosotros.html" alt="nosotros">nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./archivos HTML y CSS/deportes.html" alt="deportes">deportes</a>
+                    <a class="nav-link" href="./archivos HTML y CSS/HTML/deportes.html" alt="deportes">deportes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/lolo surf/archivos HTML y CSS/producto.html" alt="productos">productos</a>
+                    <a class="nav-link" href="/lolo surf/archivos HTML y CSS/HTML/producto.html" alt="productos">productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./archivos HTML y CSS/world.html" alt="world">world</a>
+                    <a class="nav-link" href="./archivos HTML y CSS/HTML/world.html" alt="world">world</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./archivos HTML y CSS/contacto.html" alt="contacto">contacto</a>
+                    <a class="nav-link" href="./archivos HTML y CSS/HTML/contacto.html" alt="contacto">contacto</a>
                 </li>
             </ul>
         </div>
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!--seccion de green mood donde se habla de la vida libre ------ fin -->
-    <hr>
+    <div class="linea"></div>
     <!-----FOOTER------>
         <footer>
             <div class="footer-1">
