--- a/lolo surf/archivos HTML y CSS/HTML/contacto.html
+++ b/lolo surf/archivos HTML y CSS/HTML/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="contacto.css">
+    <link rel="stylesheet" href="../CSS/contacto.css">
     <link rel="icon" href="../img/cacatua icon.png">
     <title>Contacto</title>
 </head>
@@ -14,7 +14,7 @@
     <!--barra de navegacion- inicio -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="../index.html" alt="tomas mogaburu boca">lolo <span>surf</span></a>
+        <a class="navbar-brand" href="../../index.html" alt="tomas mogaburu boca">lolo <span>surf</span></a>
     <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html" alt="home">home</a>
+                    <a class="nav-link" href="../../index.html" alt="home">home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./nosotros.html" alt="nosotros">nosotros</a>
