--- a/lolo surf/archivos HTML y CSS/HTML/nosotros.html
+++ b/lolo surf/archivos HTML y CSS/HTML/nosotros.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link rel="icon" href="../img/cacatua icon.png">
-    <title>World Life</title>
+    <title>Nosotros</title>
 </head>
 <body>
     <!--barra de navegacion- inicio -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="../index.html">lolo <span>surf</span></a>
+        <a class="navbar-brand" href="../../index.html">lolo <span>surf</span></a>
     <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./nosotros.html">nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./producto.html">productos</a>
+                    <a class="nav-link" href="../../index.html">home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./deportes.html">deportes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./producto.html">productos/a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./world.html">world</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">contacto</a>
@@ -41,40 +41,23 @@
         </div>
     </nav>
     <!--barra de navegacion- fin -->
-    <!--seccion donde hablo del mar y del verde---- inicio -->
-    <h2 class="world"><span> world life</span></h2>
-    <section class="sea-green">
-        <div class="sea">
-            <h3>Sea World</h3>
-            <p class="p1">Desde Lolo Surf buscamos que haya una vida saludable dentro del mar y por eso decidimos poner marcha y empezar a movernos para una vida mejor dentro y fuera del agua, pudiendo disfrutar de ella gozando esa fuerza que nos transmite para surfear y pudiendo valorar la vida que hay dentro de ella.</p>
+    <!-------NOSOTROS---------->
+    <div class="div-nosotros">
+        <p>Mi nombre es Tomas Mogaburu Boca, soy el creador de este sitio, apasionado del deporte y la vida al aire libre, me dedico al area de la educacion fisica, hace tiempo empece a incursionar en este deporte tan hermoso que es el surf y a ridear con el Surfskate.</p>
+    </div>
+    <div class="div-lari">
+        <p>Con mi compañera de ruta, ella todavia mas apasionada y contempladora de la naturaleza y sus momentos, decidimos comenzar con este proyecto que involucra la vida dentro y fuera del agua. Tal es asi que a traves de esta pagina queremos mostrar un poco de que se tratan estos 2 deportes cual fin es el mismo, relajar para fluir como el agua, y desde ese punto de partida ir hacia la naturaleza y de que forma podemos ayudar a que cada vez sufra menos nuestro estar sobre ella y poder disfrutarla como se lo merece.</p>
+        <div class="lar div1-lari">
         </div>
-        <div class="green">
-            <h3>Green World</h3>
-            <p class="p1">Creemos que hay que reconocer todo lo que la tierra nos dá, así que decidimos arrancar un nuevo camino apuntando hacia el cuidado del medio ambiente.</p>
+        <div class="lari div2-lari">
         </div>
-    </section> 
-    <section class="worldlife">
-        <div class="div-worldlife">
-            <h4>Nuestro Poryecto</h4>
-            <p> En World Life buscamos que desde el comienzo de una vida mas sustentable y sana fuera del agua, el mundo azul se transformaria cada vez mas en un paraiso.</p>
+        <div class="div3-lari">
+            <p>Si te copa nuestra idea e iniciativa, siendo o no del palo del surfing, podes suscribirte en nuesto - <a href="./contacto.html">Newsletter</a> - para recibir mas info y poder compartir tu foto sintiendo la fuerza de la naturaleza.</p>
         </div>
-        <div class="div1"><!--foto en el CSS--></div>
-        <div class="div2"><!--foto en el CSS--></div>
-        <div class="div3">
-            <H4>Concientizacion</H4>
-            <p>Primero de todo comenzando por limpiar todo lo que este a nuestro alcance y concientizando sobre las complicaciones que estan puedan ocasionar.</p>
-        </div>
-        <div class="div4">
-            <h4>Respeto</h4>
-            <p>Saber que vivimos en un mundo donde es habitado por seres vivos y respetar el espacio de cada uno, haciendo un mundo mejor y agradable.</p>
-        </div>
-        <div class="div5"><!--foto en el CSS--></div>
-        <div class="div6">
-            <p>Este es un trabajo que tenemos que hacer entre todos, nos gustaria que nos acompañes en este viaje hacia un mundo mejor, esto es World Life desde Lolo Surf.</p>
-            <p>Aqui te dejamos nuestro -<a href="./contacto.html">Newsletter</a>- para que te registres y comiences con esta aventura.</p>
-        </div>
-    </section>
-    <hr>
+    </div>
+    <!-----NOSOTROS--fin----->
+    <div class="linea"></div>
+    <!-----FOOTER------->
     <footer>
         <div class="footer-1">
             <ul>
@@ -86,7 +69,7 @@
         <div><p>© (Copyright symbol). Terminos y condiciones</p></div>
         <div><p>By<span class="tomas">Tomas Mogaburu Boca</span></p></div>
     </footer>
-    <!--seccion donde hablo del mar y del verde---- inicio -->   
+    <!-------FOOTER--fin------->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
