--- a/lolo surf/archivos HTML y CSS/HTML/producto.html
+++ b/lolo surf/archivos HTML y CSS/HTML/producto.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="icon" href="../img/cacatua icon.png">
-    <title>Nosotros</title>
+    <link rel="stylesheet" href="../CSS/producto.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <title>Productos</title>
 </head>
 <body>
     <!--barra de navegacion- inicio -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="../index.html">lolo <span>surf</span></a>
+        <a class="navbar-brand" href="../../index.html">lolo <span>surf</span></a>
     <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">home</a>
+                    <a class="nav-link" href="../../index.html">home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./deportes.html">deportes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./producto.html">productos/a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./world.html">world</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">contacto</a>
@@ -40,24 +37,43 @@
             </ul>
         </div>
     </nav>
-    <!--barra de navegacion- fin -->
-    <!-------NOSOTROS---------->
-    <div class="div-nosotros">
-        <p>Mi nombre es Tomas Mogaburu Boca, soy el creador de este sitio, apasionado del deporte y la vida al aire libre, me dedico al area de la educacion fisica, hace tiempo empece a incursionar en este deporte tan hermoso que es el surf y a ridear con el Surfskate.</p>
+    <h1>productos </h1>
+        <input type="text" id="search" class="input" placeholder="Busca tu producto">
+        <button id="btn-carrito"><i class="fas fa-shopping-cart"></i><span id="contadorCarrito">carrito</span></button>
+
+        <div id="seleccion">
+            <select id="seleccionTipo">
+                <option class="value" value="todos">todos</option>
+                <option class="value" value="surf">surf</option>
+                <option class="value" value="surfskate">surfskate</option>
+                <option class="value" value="remeras">remeras</option>
+            </select>
+        </div>
+        <div id="contenedor-productos">
+            <h2>tablas</h2>
+            <!--<div id="surf">
+            </div>-->
+            <h2>surfskate</h2>
+            <!--<div id="surfskate"> 
+            </div>-->
+            <h2>remeras</h2>
+            <!--<div id="remeras">
+            </div>-->
+        </div>
+<!--carrito-->
+    <div class="modal-contenedor">
+        <div class="modal-carrito">
+            <h3>Carrito</h3>
+            <div id="carrito-contendor">
+            </div>
+            <p class="precioProducto">Precio Total: $ <span id="precioTotal"></span></p>
+            <button id="carritoCerrar"><i class="fas fa-times-circle"></i>Cerrar</button>
+            <button id="terminar"><i class="fas fa-times-circle"></i>Pagar</button>
+        </div>
     </div>
-    <div class="div-lari">
-        <p>Con mi compañera de ruta, ella todavia mas apasionada y contempladora de la naturaleza y sus momentos, decidimos comenzar con este proyecto que involucra la vida dentro y fuera del agua. Tal es asi que a traves de esta pagina queremos mostrar un poco de que se tratan estos 2 deportes cual fin es el mismo, relajar para fluir como el agua, y desde ese punto de partida ir hacia la naturaleza y de que forma podemos ayudar a que cada vez sufra menos nuestro estar sobre ella y poder disfrutarla como se lo merece.</p>
-        <div class="lar div1-lari">
-        </div>
-        <div class="lari div2-lari">
-        </div>
-        <div class="div3-lari">
-            <p>Si te copa nuestra idea e iniciativa, siendo o no del palo del surfing, podes suscribirte en nuesto - <a href="./contacto.html">Newsletter</a> - para recibir mas info y poder compartir tu foto sintiendo la fuerza de la naturaleza.</p>
-        </div>
-    </div>
-    <!-----NOSOTROS--fin----->
-    <!-----FOOTER------->
-    <hr>
+    <!-----Fin Main------>
+    <div class="linea"></div>
+    <!-----FOOTER------>
     <footer>
         <div class="footer-1">
             <ul>
@@ -69,9 +85,18 @@
         <div><p>© (Copyright symbol). Terminos y condiciones</p></div>
         <div><p>By<span class="tomas">Tomas Mogaburu Boca</span></p></div>
     </footer>
-    <!-------FOOTER--fin------->
+<!-----FOOTER-----fin---->
+    <!--barra de navegacion- fin -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <!--<script src="../../archivos JS/productos.js"></script>
+    <script src="../../archivos JS/const.js"></script>
+    <script src="../../archivos JS/apps.js"></script>-->
+    <script src="/archivos JS/Carrito/stock.js"></script>
+    <script src="/archivos JS/Carrito/modal.js"></script>
+    <script src="/archivos JS/Carrito/app.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
